solved the issue with of the footer using tailwind css and took the help of the header I createdand modified it on all the three pages

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 @tailwind components; 
 @tailwind utilities; 
 
-
 .f1{
     max-width: 100%;
+    width: 120wv;
     height: 170px;
-    color: white;
+    color: #023047;
     display: flex;
     flex-direction: row;
     background-color: #023047;
